k8s/01-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: thingsboard-pg-postgresql
  namespace: thingsboard
  labels:
    app: postgresql
spec:
  ports:
  - name: postgresql
    port: 5432
    targetPort: 5432
  selector:
    app: postgresql
  type: ClusterIP

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thingsboard-pg-postgresql
  namespace: thingsboard
spec:
  serviceName: thingsboard-pg-postgresql
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: bitnamilegacy/postgresql:14.13.0-debian-12-r8
        ports:
        - containerPort: 5432
          name: postgresql
        volumeMounts:
        - name: data
          mountPath: /bitnami/postgresql
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 8Gi
      storageClassName: standard  # Change to your storage class
